# Claude-plugins

./: .gitignore  README.md  SECURITY.md  marketplace.json
carry-forward/: .mcp.json  README.md
codebase-onboard/: .mcp.json  README.md  pyproject.toml
codebase-onboard/.claude-plugin/: marketplace.json  plugin.json
codebase-onboard/hooks/: hooks.json
codebase-onboard/skills/find/: SKILL.md
codebase-onboard/skills/onboard/: SKILL.md
codebase-onboard/skills/refresh/: SKILL.md
codebase-onboard/src/: server.py  stop_hook.py
cost-guard/: .mcp.json  README.md  pyproject.toml
cost-guard/.claude-plugin/: marketplace.json  plugin.json
cost-guard/hooks/: hooks.json
cost-guard/skills/budget/: SKILL.md
cost-guard/skills/report/: SKILL.md
cost-guard/skills/setup/: SKILL.md
cost-guard/src/: pretool_hook.py  pricing.py  server.py  stop_hook.py
deep-engineer/: .mcp.json
dependency-doctor/: .mcp.json  README.md  pyproject.toml
dependency-doctor/.claude-plugin/: marketplace.json  plugin.json
dependency-doctor/hooks/: hooks.json
dependency-doctor/skills/analyze/: SKILL.md
dependency-doctor/skills/approve/: SKILL.md
dependency-doctor/skills/audit/: SKILL.md
dependency-doctor/skills/reject/: SKILL.md
dependency-doctor/skills/setup/: SKILL.md
dependency-doctor/src/: pretool_hook.py  server.py
diff-narrator/: .mcp.json  README.md  pyproject.toml
diff-narrator/.claude-plugin/: marketplace.json  plugin.json
diff-narrator/hooks/: hooks.json
diff-narrator/skills/pr-description/: SKILL.md
diff-narrator/skills/setup/: SKILL.md
diff-narrator/skills/summary/: SKILL.md
diff-narrator/src/: posttool_hook.py  server.py
pair-mode/: .mcp.json  README.md  pyproject.toml
pair-mode/.claude-plugin/: marketplace.json  plugin.json
pair-mode/hooks/: hooks.json
pair-mode/skills/pair/: SKILL.md
pair-mode/skills/setup/: SKILL.md
pair-mode/skills/stats/: SKILL.md
pair-mode/src/: posttool_hook.py  pretool_hook.py  server.py  stop_hook.py
regression-sentinel/: .mcp.json  README.md  pyproject.toml
regression-sentinel/.claude-plugin/: marketplace.json  plugin.json
regression-sentinel/hooks/: hooks.json
regression-sentinel/skills/configure/: SKILL.md
regression-sentinel/skills/setup/: SKILL.md
regression-sentinel/skills/status/: SKILL.md
regression-sentinel/src/: posttool_hook.py  pretool_hook.py  server.py
rollback/: .mcp.json  README.md  pyproject.toml
rollback/.claude-plugin/: marketplace.json  plugin.json
rollback/hooks/: hooks.json
rollback/skills/rollback/: SKILL.md
rollback/skills/rollback-list/: SKILL.md
rollback/skills/setup/: SKILL.md
rollback/src/: posttool_hook.py  pretool_hook.py  server.py
rubber-duck/: .mcp.json  README.md  pyproject.toml
rubber-duck/.claude-plugin/: marketplace.json  plugin.json
rubber-duck/hooks/: hooks.json
rubber-duck/skills/explain/: SKILL.md
rubber-duck/skills/setup/: SKILL.md
rubber-duck/src/: pretool_hook.py  server.py  stop_hook.py
scope-lock/: .mcp.json  README.md  pyproject.toml
scope-lock/.claude-plugin/: marketplace.json  plugin.json
scope-lock/hooks/: hooks.json
scope-lock/skills/lock/: SKILL.md
scope-lock/skills/setup/: SKILL.md
scope-lock/skills/status/: SKILL.md
scope-lock/skills/unlock/: SKILL.md
scope-lock/src/: pretool_hook.py  server.py  stop_hook.py
time-capsule/: .mcp.json  README.md  pyproject.toml
time-capsule/.claude-plugin/: marketplace.json  plugin.json
time-capsule/hooks/: hooks.json
time-capsule/skills/checkpoint/: SKILL.md
time-capsule/skills/setup/: SKILL.md
time-capsule/src/: pretool_hook.py  server.py  stop_hook.py
video-insight/: .mcp.json  README.md
