[project]
name = "codebase-onboard"
version = "1.0.0"
description = "Analyzes your codebase and generates an onboarding guide: architecture diagrams,"
requires-python = ">=3.10"
authors = [{ name = "Gowtham" }]
license = { text = "MIT" }
dependencies = ["fastmcp>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
