[project]
name = "cost-guard"
version = "1.0.0"
description = "Token budget and cost tracker for Claude Code"
requires-python = ">=3.10"
authors = [{ name = "Gowtham" }]
license = { text = "MIT" }
dependencies = ["fastmcp>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
