[project]
name = "dependency-doctor"
version = "1.0.0"
description = "Analyzes dependencies before installation: bundle size, vulnerabilities, license"
requires-python = ">=3.10"
authors = [{ name = "Gowtham" }]
license = { text = "MIT" }
dependencies = ["fastmcp>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
