[project]
name = "pair-mode"
version = "1.0.0"
description = "Enforces ping-pong pair programming. Claude writes one block, pauses for human r"
requires-python = ">=3.10"
authors = [{ name = "Gowtham" }]
license = { text = "MIT" }
dependencies = ["fastmcp>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
