[project]
name = "regression-sentinel"
version = "1.0.0"
description = "Continuous regression watcher. Runs tests automatically after every file edit, d"
requires-python = ">=3.10"
authors = [{ name = "Gowtham" }]
license = { text = "MIT" }
dependencies = ["fastmcp>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
