[project]
name = "rollback"
version = "1.0.0"
description = "One-command undo for any Claude action. Logs every file change with before/after"
requires-python = ">=3.10"
authors = [{ name = "Gowtham" }]
license = { text = "MIT" }
dependencies = ["fastmcp>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
