[project]
name = "rubber-duck"
version = "1.0.0"
description = "Explain-before-you-code enforcer. Forces Claude to describe its approach in plai"
requires-python = ">=3.10"
authors = [{ name = "Gowtham" }]
license = { text = "MIT" }
dependencies = ["fastmcp>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
