[project]
name = "scope-lock"
version = "1.0.0"
description = "Prevent scope creep. Define exact files/directories Claude can touch. PreToolUse"
requires-python = ">=3.10"
authors = [{ name = "Gowtham" }]
license = { text = "MIT" }
dependencies = ["fastmcp>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
