[project]
name = "time-capsule"
version = "1.0.0"
description = "Git checkpoint auto-saver. Auto-creates lightweight git snapshots before risky e"
requires-python = ">=3.10"
authors = [{ name = "Gowtham" }]
license = { text = "MIT" }
dependencies = ["fastmcp>=2.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
